--- a/p8105_hw5_kq2127.Rmd
+++ b/p8105_hw5_kq2127.Rmd
@@ -22,12 +22,25 @@ options(
 scale_colour_discrete = scale_colour_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
 theme_set(theme_minimal() + theme(legend.position = "bottom"))
-set.seed(1)
 ```
 
-# Question 1
+# Problem 1
 
 ```{r}
+set.seed(10)
 
+iris_with_missing = iris %>% 
+  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+  mutate(Species = as.character(Species))
+
+
+iris_with_missing %>% 
+    mutate( 
+      Species = replace_na(Species,"virginica"), 
+      Sepal.Length = replace_na(Sepal.Length, round(mean(Sepal.Length, na.rm = TRUE),1)),
+      Sepal.Width = replace_na(Sepal.Width, round(mean(Sepal.Width, na.rm = TRUE),1)),
+      Petal.Length = replace_na(Petal.Length, round(mean(Petal.Length, na.rm = TRUE),1)),
+      Petal.Width = replace_na(Petal.Width, round(mean(Petal.Width, na.rm = TRUE),1))
+)
 ```
 
