--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -37,3 +37,184 @@ iris_with_missing %>%
     ##  9          4.4         2.9          1.4         0.2 setosa 
     ## 10          4.9         3.1          3.8         0.1 setosa 
     ## # ... with 140 more rows
+
+``` r
+replace_na = function(x) {
+  if (is.numeric(x)) {
+    x[is.na(x)] = mean(x, na.rm = TRUE)
+    x }
+  else if (is.character(x)) {
+    x[is.na(x)] = "virginica"
+    x
+  }
+}
+```
+
+Testing the
+    function
+
+``` r
+replace_na(iris_with_missing[[1]])
+```
+
+    ##   [1] 5.100000 4.900000 4.700000 4.600000 5.000000 5.400000 5.819231
+    ##   [8] 5.000000 4.400000 4.900000 5.400000 4.800000 5.819231 4.300000
+    ##  [15] 5.819231 5.700000 5.400000 5.100000 5.700000 5.100000 5.400000
+    ##  [22] 5.100000 4.600000 5.819231 4.800000 5.000000 5.000000 5.200000
+    ##  [29] 5.819231 4.700000 4.800000 5.400000 5.200000 5.500000 4.900000
+    ##  [36] 5.000000 5.500000 4.900000 4.400000 5.100000 5.000000 4.500000
+    ##  [43] 4.400000 5.000000 5.100000 4.800000 5.100000 4.600000 5.300000
+    ##  [50] 5.000000 7.000000 6.400000 6.900000 5.500000 6.500000 5.700000
+    ##  [57] 6.300000 4.900000 6.600000 5.200000 5.000000 5.900000 6.000000
+    ##  [64] 6.100000 5.600000 6.700000 5.600000 5.800000 6.200000 5.600000
+    ##  [71] 5.900000 5.819231 6.300000 5.819231 6.400000 6.600000 6.800000
+    ##  [78] 6.700000 6.000000 5.700000 5.500000 5.819231 5.800000 6.000000
+    ##  [85] 5.400000 5.819231 6.700000 5.819231 5.600000 5.500000 5.500000
+    ##  [92] 5.819231 5.800000 5.000000 5.819231 5.700000 5.700000 6.200000
+    ##  [99] 5.100000 5.700000 6.300000 5.800000 7.100000 6.300000 6.500000
+    ## [106] 7.600000 4.900000 7.300000 6.700000 5.819231 6.500000 5.819231
+    ## [113] 6.800000 5.700000 5.800000 6.400000 6.500000 7.700000 7.700000
+    ## [120] 6.000000 5.819231 5.600000 7.700000 6.300000 6.700000 7.200000
+    ## [127] 6.200000 6.100000 6.400000 7.200000 7.400000 7.900000 6.400000
+    ## [134] 5.819231 6.100000 5.819231 5.819231 6.400000 6.000000 6.900000
+    ## [141] 6.700000 6.900000 5.819231 6.800000 6.700000 6.700000 6.300000
+    ## [148] 6.500000 5.819231 5.900000
+
+``` r
+replace_na(iris_with_missing[[2]])
+```
+
+    ##   [1] 3.500000 3.000000 3.200000 3.100000 3.600000 3.900000 3.400000
+    ##   [8] 3.400000 2.900000 3.100000 3.075385 3.400000 3.075385 3.000000
+    ##  [15] 4.000000 4.400000 3.900000 3.500000 3.800000 3.800000 3.400000
+    ##  [22] 3.700000 3.600000 3.300000 3.400000 3.000000 3.400000 3.500000
+    ##  [29] 3.400000 3.200000 3.100000 3.075385 3.075385 4.200000 3.100000
+    ##  [36] 3.200000 3.500000 3.600000 3.000000 3.400000 3.500000 3.075385
+    ##  [43] 3.200000 3.500000 3.800000 3.000000 3.800000 3.200000 3.700000
+    ##  [50] 3.075385 3.075385 3.200000 3.100000 2.300000 2.800000 2.800000
+    ##  [57] 3.300000 2.400000 2.900000 2.700000 2.000000 3.000000 2.200000
+    ##  [64] 2.900000 2.900000 3.100000 3.000000 3.075385 2.200000 2.500000
+    ##  [71] 3.200000 2.800000 2.500000 2.800000 2.900000 3.000000 2.800000
+    ##  [78] 3.075385 3.075385 2.600000 2.400000 2.400000 2.700000 2.700000
+    ##  [85] 3.000000 3.400000 3.100000 3.075385 3.000000 2.500000 3.075385
+    ##  [92] 3.075385 3.075385 2.300000 2.700000 3.000000 2.900000 2.900000
+    ##  [99] 2.500000 2.800000 3.075385 2.700000 3.000000 2.900000 3.075385
+    ## [106] 3.000000 2.500000 2.900000 3.075385 3.600000 3.200000 2.700000
+    ## [113] 3.000000 3.075385 2.800000 3.200000 3.000000 3.800000 2.600000
+    ## [120] 2.200000 3.200000 3.075385 2.800000 2.700000 3.300000 3.200000
+    ## [127] 2.800000 3.000000 2.800000 3.000000 2.800000 3.800000 2.800000
+    ## [134] 2.800000 3.075385 3.000000 3.400000 3.100000 3.000000 3.100000
+    ## [141] 3.100000 3.100000 2.700000 3.200000 3.300000 3.000000 2.500000
+    ## [148] 3.000000 3.400000 3.000000
+
+``` r
+replace_na(iris_with_missing[[3]])
+```
+
+    ##   [1] 1.400000 1.400000 1.300000 1.500000 1.400000 1.700000 1.400000
+    ##   [8] 1.500000 1.400000 3.765385 1.500000 1.600000 1.400000 3.765385
+    ##  [15] 3.765385 1.500000 1.300000 1.400000 1.700000 1.500000 1.700000
+    ##  [22] 1.500000 1.000000 3.765385 1.900000 3.765385 1.600000 1.500000
+    ##  [29] 1.400000 1.600000 3.765385 1.500000 1.500000 1.400000 3.765385
+    ##  [36] 1.200000 1.300000 1.400000 1.300000 1.500000 1.300000 1.300000
+    ##  [43] 1.300000 1.600000 1.900000 1.400000 1.600000 3.765385 1.500000
+    ##  [50] 1.400000 4.700000 4.500000 4.900000 4.000000 4.600000 4.500000
+    ##  [57] 4.700000 3.765385 4.600000 3.900000 3.765385 4.200000 4.000000
+    ##  [64] 4.700000 3.600000 4.400000 4.500000 4.100000 4.500000 3.900000
+    ##  [71] 4.800000 4.000000 4.900000 3.765385 4.300000 4.400000 4.800000
+    ##  [78] 5.000000 4.500000 3.500000 3.800000 3.700000 3.900000 5.100000
+    ##  [85] 4.500000 4.500000 4.700000 4.400000 3.765385 4.000000 4.400000
+    ##  [92] 4.600000 4.000000 3.300000 4.200000 4.200000 4.200000 4.300000
+    ##  [99] 3.000000 4.100000 3.765385 5.100000 5.900000 5.600000 5.800000
+    ## [106] 6.600000 4.500000 6.300000 3.765385 3.765385 5.100000 5.300000
+    ## [113] 5.500000 5.000000 5.100000 5.300000 3.765385 6.700000 6.900000
+    ## [120] 5.000000 5.700000 4.900000 6.700000 4.900000 5.700000 6.000000
+    ## [127] 4.800000 4.900000 5.600000 5.800000 6.100000 3.765385 3.765385
+    ## [134] 5.100000 5.600000 6.100000 5.600000 5.500000 4.800000 5.400000
+    ## [141] 5.600000 5.100000 5.100000 3.765385 3.765385 5.200000 5.000000
+    ## [148] 5.200000 5.400000 5.100000
+
+``` r
+replace_na(iris_with_missing[[4]])
+```
+
+    ##   [1] 0.200000 0.200000 0.200000 1.192308 0.200000 0.400000 0.300000
+    ##   [8] 0.200000 0.200000 0.100000 0.200000 0.200000 0.100000 0.100000
+    ##  [15] 0.200000 0.400000 0.400000 1.192308 0.300000 1.192308 0.200000
+    ##  [22] 0.400000 0.200000 0.500000 0.200000 0.200000 0.400000 0.200000
+    ##  [29] 0.200000 0.200000 0.200000 0.400000 0.100000 0.200000 0.200000
+    ##  [36] 0.200000 0.200000 0.100000 1.192308 0.200000 0.300000 1.192308
+    ##  [43] 0.200000 0.600000 0.400000 0.300000 0.200000 0.200000 0.200000
+    ##  [50] 0.200000 1.400000 1.500000 1.500000 1.300000 1.500000 1.300000
+    ##  [57] 1.600000 1.000000 1.300000 1.400000 1.000000 1.500000 1.192308
+    ##  [64] 1.400000 1.300000 1.400000 1.500000 1.000000 1.500000 1.100000
+    ##  [71] 1.800000 1.300000 1.500000 1.200000 1.300000 1.400000 1.400000
+    ##  [78] 1.192308 1.192308 1.000000 1.100000 1.000000 1.200000 1.600000
+    ##  [85] 1.500000 1.600000 1.192308 1.300000 1.192308 1.192308 1.200000
+    ##  [92] 1.192308 1.192308 1.192308 1.300000 1.200000 1.300000 1.300000
+    ##  [99] 1.192308 1.300000 2.500000 1.900000 2.100000 1.800000 2.200000
+    ## [106] 2.100000 1.700000 1.800000 1.800000 2.500000 2.000000 1.900000
+    ## [113] 2.100000 2.000000 2.400000 2.300000 1.800000 1.192308 2.300000
+    ## [120] 1.500000 1.192308 2.000000 2.000000 1.800000 2.100000 1.800000
+    ## [127] 1.800000 1.800000 2.100000 1.600000 1.192308 2.000000 2.200000
+    ## [134] 1.500000 1.400000 2.300000 1.192308 1.192308 1.800000 2.100000
+    ## [141] 2.400000 2.300000 1.900000 2.300000 2.500000 2.300000 1.900000
+    ## [148] 2.000000 2.300000 1.800000
+
+``` r
+replace_na(iris_with_missing[[5]])
+```
+
+    ##   [1] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##   [6] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [11] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [16] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [21] "setosa"     "virginica"  "setosa"     "setosa"     "virginica" 
+    ##  [26] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [31] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [36] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [41] "setosa"     "virginica"  "setosa"     "setosa"     "setosa"    
+    ##  [46] "virginica"  "setosa"     "setosa"     "setosa"     "setosa"    
+    ##  [51] "virginica"  "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [56] "versicolor" "virginica"  "versicolor" "virginica"  "versicolor"
+    ##  [61] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [66] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [71] "versicolor" "virginica"  "versicolor" "versicolor" "versicolor"
+    ##  [76] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ##  [81] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [86] "versicolor" "versicolor" "versicolor" "versicolor" "versicolor"
+    ##  [91] "versicolor" "versicolor" "versicolor" "virginica"  "versicolor"
+    ##  [96] "versicolor" "versicolor" "versicolor" "versicolor" "virginica" 
+    ## [101] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [106] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [111] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [116] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [121] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [126] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [131] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [136] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [141] "virginica"  "virginica"  "virginica"  "virginica"  "virginica" 
+    ## [146] "virginica"  "virginica"  "virginica"  "virginica"  "virginica"
+
+Applying the function and mapping
+
+``` r
+output = map_dfr(iris_with_missing, replace_na)
+
+output
+```
+
+    ## # A tibble: 150 x 5
+    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
+    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
+    ##  1         5.1          3.5         1.4         0.2  setosa 
+    ##  2         4.9          3           1.4         0.2  setosa 
+    ##  3         4.7          3.2         1.3         0.2  setosa 
+    ##  4         4.6          3.1         1.5         1.19 setosa 
+    ##  5         5            3.6         1.4         0.2  setosa 
+    ##  6         5.4          3.9         1.7         0.4  setosa 
+    ##  7         5.82         3.4         1.4         0.3  setosa 
+    ##  8         5            3.4         1.5         0.2  setosa 
+    ##  9         4.4          2.9         1.4         0.2  setosa 
+    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ## # ... with 140 more rows
