started working on problem 2, map cannot find first csv file in pb2_df, it says it cant find it in the working directory

--- a/p8105_hw5_kq2127.Rmd
+++ b/p8105_hw5_kq2127.Rmd
@@ -75,3 +75,19 @@ output = map_dfr(iris_with_missing, replace_na)
 output
 ```
 
+# Problem 2
+
+```{r}
+pb2_df =list.files(path = "./data") 
+
+#op = map(pb2_df, read_csv)
+
+
+#for (i in a){
+#b <- read.csv(i)
+#}
+
+```
+
+
+
