--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -218,3 +218,16 @@ output
     ##  9         4.4          2.9         1.4         0.2  setosa 
     ## 10         4.9          3.1         3.77        0.1  setosa 
     ## # ... with 140 more rows
+
+# Problem 2
+
+``` r
+pb2_df =list.files(path = "./data") 
+
+#op = map(pb2_df, read_csv)
+
+
+#for (i in a){
+#b <- read.csv(i)
+#}
+```
