fixed code for graph so only one graph appeared with ID ordered and converted to a factor

--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -222,17 +222,17 @@ output
 # Problem 2
 
 ``` r
-pb2_df = list.files(path = "./data/",
-                    pattern = "*.csv",
-                    full.names = TRUE) 
-
-op = 
-    map_df(pb2_df, read_csv, .id = "input") %>% 
-    rename(id = input) %>% 
-    mutate(
-      id = as.numeric(id),
-      arm = ifelse(id <= 10, "con", "exp"),
-      id = recode(id,
+pb2_df = 
+  list.files(
+    path = "./data/",
+    pattern = "*.csv",
+    full.names = TRUE) %>% 
+  map_df(read_csv, .id = "input") %>% 
+  rename(id = input) %>% 
+  mutate(
+    id = as.numeric(id),
+    arm = ifelse(id <= 10, "con", "exp"),
+    id = recode(id,
        '11' = 1,
        '12' = 2,
        '13' = 3,
@@ -243,12 +243,12 @@ op =
        '18' = 8,
        '19' = 9,
        '20' = 10)) %>% 
-    pivot_longer(
-      week_1:week_8,
-      names_to = "week",
-      names_prefix = "week_",
-      values_to = "observation") %>%
-    select(id, arm, everything())
+  pivot_longer(
+    week_1:week_8,
+    names_to = "week",
+    names_prefix = "week_",
+    values_to = "observation") %>%
+  select(id, arm, everything())
 ```
 
     ## Parsed with column specification:
@@ -473,25 +473,13 @@ op =
     ## )
 
 ``` r
-op %>% 
-  filter(arm == "con") %>% 
-  mutate (id = as.character(id)) %>% 
-  ggplot(aes(x = week, y = observation, color = id)) + 
-  geom_point(alpha =.5) + geom_smooth(se = FALSE) 
+pb2_df %>% 
+  mutate (id = as.factor(id)) %>% 
+  ggplot(aes(x = week, y = observation, color = id, group = id)) + 
+  geom_point(alpha =.5) +
+  geom_line() +
+  facet_grid(~arm) +
+  ggtitle("Observations over time") 
 ```
-
-    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
 
 <img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
-
-``` r
-op %>% 
-  filter(arm == "exp") %>% 
-  mutate (id = as.character(id)) %>% 
-  ggplot(aes(x = week, y = observation, color = id)) + 
-  geom_point(alpha =.5) + geom_smooth(se = FALSE) 
-```
-
-    ## `geom_smooth()` using method = 'loess' and formula 'y ~ x'
-
-<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-5-2.png" width="90%" />
