--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -11,37 +11,14 @@ set.seed(10)
 iris_with_missing = iris %>% 
   map_df(~replace(.x, sample(1:150, 20), NA)) %>%
   mutate(Species = as.character(Species))
-
-
-iris_with_missing %>% 
-    mutate( 
-      Species = replace_na(Species,"virginica"), 
-      Sepal.Length = replace_na(Sepal.Length, round(mean(Sepal.Length, na.rm = TRUE),1)),
-      Sepal.Width = replace_na(Sepal.Width, round(mean(Sepal.Width, na.rm = TRUE),1)),
-      Petal.Length = replace_na(Petal.Length, round(mean(Petal.Length, na.rm = TRUE),1)),
-      Petal.Width = replace_na(Petal.Width, round(mean(Petal.Width, na.rm = TRUE),1))
-)
 ```
 
-    ## # A tibble: 150 x 5
-    ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
-    ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
-    ##  1          5.1         3.5          1.4         0.2 setosa 
-    ##  2          4.9         3            1.4         0.2 setosa 
-    ##  3          4.7         3.2          1.3         0.2 setosa 
-    ##  4          4.6         3.1          1.5         1.2 setosa 
-    ##  5          5           3.6          1.4         0.2 setosa 
-    ##  6          5.4         3.9          1.7         0.4 setosa 
-    ##  7          5.8         3.4          1.4         0.3 setosa 
-    ##  8          5           3.4          1.5         0.2 setosa 
-    ##  9          4.4         2.9          1.4         0.2 setosa 
-    ## 10          4.9         3.1          3.8         0.1 setosa 
-    ## # ... with 140 more rows
+Writting the Function
 
 ``` r
 replace_na = function(x) {
   if (is.numeric(x)) {
-    x[is.na(x)] = mean(x, na.rm = TRUE)
+    x[is.na(x)] = round(mean(x, na.rm = TRUE),1)
     x }
   else if (is.character(x)) {
     x[is.na(x)] = "virginica"
@@ -57,109 +34,57 @@ Testing the
 replace_na(iris_with_missing[[1]])
 ```
 
-    ##   [1] 5.100000 4.900000 4.700000 4.600000 5.000000 5.400000 5.819231
-    ##   [8] 5.000000 4.400000 4.900000 5.400000 4.800000 5.819231 4.300000
-    ##  [15] 5.819231 5.700000 5.400000 5.100000 5.700000 5.100000 5.400000
-    ##  [22] 5.100000 4.600000 5.819231 4.800000 5.000000 5.000000 5.200000
-    ##  [29] 5.819231 4.700000 4.800000 5.400000 5.200000 5.500000 4.900000
-    ##  [36] 5.000000 5.500000 4.900000 4.400000 5.100000 5.000000 4.500000
-    ##  [43] 4.400000 5.000000 5.100000 4.800000 5.100000 4.600000 5.300000
-    ##  [50] 5.000000 7.000000 6.400000 6.900000 5.500000 6.500000 5.700000
-    ##  [57] 6.300000 4.900000 6.600000 5.200000 5.000000 5.900000 6.000000
-    ##  [64] 6.100000 5.600000 6.700000 5.600000 5.800000 6.200000 5.600000
-    ##  [71] 5.900000 5.819231 6.300000 5.819231 6.400000 6.600000 6.800000
-    ##  [78] 6.700000 6.000000 5.700000 5.500000 5.819231 5.800000 6.000000
-    ##  [85] 5.400000 5.819231 6.700000 5.819231 5.600000 5.500000 5.500000
-    ##  [92] 5.819231 5.800000 5.000000 5.819231 5.700000 5.700000 6.200000
-    ##  [99] 5.100000 5.700000 6.300000 5.800000 7.100000 6.300000 6.500000
-    ## [106] 7.600000 4.900000 7.300000 6.700000 5.819231 6.500000 5.819231
-    ## [113] 6.800000 5.700000 5.800000 6.400000 6.500000 7.700000 7.700000
-    ## [120] 6.000000 5.819231 5.600000 7.700000 6.300000 6.700000 7.200000
-    ## [127] 6.200000 6.100000 6.400000 7.200000 7.400000 7.900000 6.400000
-    ## [134] 5.819231 6.100000 5.819231 5.819231 6.400000 6.000000 6.900000
-    ## [141] 6.700000 6.900000 5.819231 6.800000 6.700000 6.700000 6.300000
-    ## [148] 6.500000 5.819231 5.900000
+    ##   [1] 5.1 4.9 4.7 4.6 5.0 5.4 5.8 5.0 4.4 4.9 5.4 4.8 5.8 4.3 5.8 5.7 5.4
+    ##  [18] 5.1 5.7 5.1 5.4 5.1 4.6 5.8 4.8 5.0 5.0 5.2 5.8 4.7 4.8 5.4 5.2 5.5
+    ##  [35] 4.9 5.0 5.5 4.9 4.4 5.1 5.0 4.5 4.4 5.0 5.1 4.8 5.1 4.6 5.3 5.0 7.0
+    ##  [52] 6.4 6.9 5.5 6.5 5.7 6.3 4.9 6.6 5.2 5.0 5.9 6.0 6.1 5.6 6.7 5.6 5.8
+    ##  [69] 6.2 5.6 5.9 5.8 6.3 5.8 6.4 6.6 6.8 6.7 6.0 5.7 5.5 5.8 5.8 6.0 5.4
+    ##  [86] 5.8 6.7 5.8 5.6 5.5 5.5 5.8 5.8 5.0 5.8 5.7 5.7 6.2 5.1 5.7 6.3 5.8
+    ## [103] 7.1 6.3 6.5 7.6 4.9 7.3 6.7 5.8 6.5 5.8 6.8 5.7 5.8 6.4 6.5 7.7 7.7
+    ## [120] 6.0 5.8 5.6 7.7 6.3 6.7 7.2 6.2 6.1 6.4 7.2 7.4 7.9 6.4 5.8 6.1 5.8
+    ## [137] 5.8 6.4 6.0 6.9 6.7 6.9 5.8 6.8 6.7 6.7 6.3 6.5 5.8 5.9
 
 ``` r
 replace_na(iris_with_missing[[2]])
 ```
 
-    ##   [1] 3.500000 3.000000 3.200000 3.100000 3.600000 3.900000 3.400000
-    ##   [8] 3.400000 2.900000 3.100000 3.075385 3.400000 3.075385 3.000000
-    ##  [15] 4.000000 4.400000 3.900000 3.500000 3.800000 3.800000 3.400000
-    ##  [22] 3.700000 3.600000 3.300000 3.400000 3.000000 3.400000 3.500000
-    ##  [29] 3.400000 3.200000 3.100000 3.075385 3.075385 4.200000 3.100000
-    ##  [36] 3.200000 3.500000 3.600000 3.000000 3.400000 3.500000 3.075385
-    ##  [43] 3.200000 3.500000 3.800000 3.000000 3.800000 3.200000 3.700000
-    ##  [50] 3.075385 3.075385 3.200000 3.100000 2.300000 2.800000 2.800000
-    ##  [57] 3.300000 2.400000 2.900000 2.700000 2.000000 3.000000 2.200000
-    ##  [64] 2.900000 2.900000 3.100000 3.000000 3.075385 2.200000 2.500000
-    ##  [71] 3.200000 2.800000 2.500000 2.800000 2.900000 3.000000 2.800000
-    ##  [78] 3.075385 3.075385 2.600000 2.400000 2.400000 2.700000 2.700000
-    ##  [85] 3.000000 3.400000 3.100000 3.075385 3.000000 2.500000 3.075385
-    ##  [92] 3.075385 3.075385 2.300000 2.700000 3.000000 2.900000 2.900000
-    ##  [99] 2.500000 2.800000 3.075385 2.700000 3.000000 2.900000 3.075385
-    ## [106] 3.000000 2.500000 2.900000 3.075385 3.600000 3.200000 2.700000
-    ## [113] 3.000000 3.075385 2.800000 3.200000 3.000000 3.800000 2.600000
-    ## [120] 2.200000 3.200000 3.075385 2.800000 2.700000 3.300000 3.200000
-    ## [127] 2.800000 3.000000 2.800000 3.000000 2.800000 3.800000 2.800000
-    ## [134] 2.800000 3.075385 3.000000 3.400000 3.100000 3.000000 3.100000
-    ## [141] 3.100000 3.100000 2.700000 3.200000 3.300000 3.000000 2.500000
-    ## [148] 3.000000 3.400000 3.000000
+    ##   [1] 3.5 3.0 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 3.1 3.4 3.1 3.0 4.0 4.4 3.9
+    ##  [18] 3.5 3.8 3.8 3.4 3.7 3.6 3.3 3.4 3.0 3.4 3.5 3.4 3.2 3.1 3.1 3.1 4.2
+    ##  [35] 3.1 3.2 3.5 3.6 3.0 3.4 3.5 3.1 3.2 3.5 3.8 3.0 3.8 3.2 3.7 3.1 3.1
+    ##  [52] 3.2 3.1 2.3 2.8 2.8 3.3 2.4 2.9 2.7 2.0 3.0 2.2 2.9 2.9 3.1 3.0 3.1
+    ##  [69] 2.2 2.5 3.2 2.8 2.5 2.8 2.9 3.0 2.8 3.1 3.1 2.6 2.4 2.4 2.7 2.7 3.0
+    ##  [86] 3.4 3.1 3.1 3.0 2.5 3.1 3.1 3.1 2.3 2.7 3.0 2.9 2.9 2.5 2.8 3.1 2.7
+    ## [103] 3.0 2.9 3.1 3.0 2.5 2.9 3.1 3.6 3.2 2.7 3.0 3.1 2.8 3.2 3.0 3.8 2.6
+    ## [120] 2.2 3.2 3.1 2.8 2.7 3.3 3.2 2.8 3.0 2.8 3.0 2.8 3.8 2.8 2.8 3.1 3.0
+    ## [137] 3.4 3.1 3.0 3.1 3.1 3.1 2.7 3.2 3.3 3.0 2.5 3.0 3.4 3.0
 
 ``` r
 replace_na(iris_with_missing[[3]])
 ```
 
-    ##   [1] 1.400000 1.400000 1.300000 1.500000 1.400000 1.700000 1.400000
-    ##   [8] 1.500000 1.400000 3.765385 1.500000 1.600000 1.400000 3.765385
-    ##  [15] 3.765385 1.500000 1.300000 1.400000 1.700000 1.500000 1.700000
-    ##  [22] 1.500000 1.000000 3.765385 1.900000 3.765385 1.600000 1.500000
-    ##  [29] 1.400000 1.600000 3.765385 1.500000 1.500000 1.400000 3.765385
-    ##  [36] 1.200000 1.300000 1.400000 1.300000 1.500000 1.300000 1.300000
-    ##  [43] 1.300000 1.600000 1.900000 1.400000 1.600000 3.765385 1.500000
-    ##  [50] 1.400000 4.700000 4.500000 4.900000 4.000000 4.600000 4.500000
-    ##  [57] 4.700000 3.765385 4.600000 3.900000 3.765385 4.200000 4.000000
-    ##  [64] 4.700000 3.600000 4.400000 4.500000 4.100000 4.500000 3.900000
-    ##  [71] 4.800000 4.000000 4.900000 3.765385 4.300000 4.400000 4.800000
-    ##  [78] 5.000000 4.500000 3.500000 3.800000 3.700000 3.900000 5.100000
-    ##  [85] 4.500000 4.500000 4.700000 4.400000 3.765385 4.000000 4.400000
-    ##  [92] 4.600000 4.000000 3.300000 4.200000 4.200000 4.200000 4.300000
-    ##  [99] 3.000000 4.100000 3.765385 5.100000 5.900000 5.600000 5.800000
-    ## [106] 6.600000 4.500000 6.300000 3.765385 3.765385 5.100000 5.300000
-    ## [113] 5.500000 5.000000 5.100000 5.300000 3.765385 6.700000 6.900000
-    ## [120] 5.000000 5.700000 4.900000 6.700000 4.900000 5.700000 6.000000
-    ## [127] 4.800000 4.900000 5.600000 5.800000 6.100000 3.765385 3.765385
-    ## [134] 5.100000 5.600000 6.100000 5.600000 5.500000 4.800000 5.400000
-    ## [141] 5.600000 5.100000 5.100000 3.765385 3.765385 5.200000 5.000000
-    ## [148] 5.200000 5.400000 5.100000
+    ##   [1] 1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 3.8 1.5 1.6 1.4 3.8 3.8 1.5 1.3
+    ##  [18] 1.4 1.7 1.5 1.7 1.5 1.0 3.8 1.9 3.8 1.6 1.5 1.4 1.6 3.8 1.5 1.5 1.4
+    ##  [35] 3.8 1.2 1.3 1.4 1.3 1.5 1.3 1.3 1.3 1.6 1.9 1.4 1.6 3.8 1.5 1.4 4.7
+    ##  [52] 4.5 4.9 4.0 4.6 4.5 4.7 3.8 4.6 3.9 3.8 4.2 4.0 4.7 3.6 4.4 4.5 4.1
+    ##  [69] 4.5 3.9 4.8 4.0 4.9 3.8 4.3 4.4 4.8 5.0 4.5 3.5 3.8 3.7 3.9 5.1 4.5
+    ##  [86] 4.5 4.7 4.4 3.8 4.0 4.4 4.6 4.0 3.3 4.2 4.2 4.2 4.3 3.0 4.1 3.8 5.1
+    ## [103] 5.9 5.6 5.8 6.6 4.5 6.3 3.8 3.8 5.1 5.3 5.5 5.0 5.1 5.3 3.8 6.7 6.9
+    ## [120] 5.0 5.7 4.9 6.7 4.9 5.7 6.0 4.8 4.9 5.6 5.8 6.1 3.8 3.8 5.1 5.6 6.1
+    ## [137] 5.6 5.5 4.8 5.4 5.6 5.1 5.1 3.8 3.8 5.2 5.0 5.2 5.4 5.1
 
 ``` r
 replace_na(iris_with_missing[[4]])
 ```
 
-    ##   [1] 0.200000 0.200000 0.200000 1.192308 0.200000 0.400000 0.300000
-    ##   [8] 0.200000 0.200000 0.100000 0.200000 0.200000 0.100000 0.100000
-    ##  [15] 0.200000 0.400000 0.400000 1.192308 0.300000 1.192308 0.200000
-    ##  [22] 0.400000 0.200000 0.500000 0.200000 0.200000 0.400000 0.200000
-    ##  [29] 0.200000 0.200000 0.200000 0.400000 0.100000 0.200000 0.200000
-    ##  [36] 0.200000 0.200000 0.100000 1.192308 0.200000 0.300000 1.192308
-    ##  [43] 0.200000 0.600000 0.400000 0.300000 0.200000 0.200000 0.200000
-    ##  [50] 0.200000 1.400000 1.500000 1.500000 1.300000 1.500000 1.300000
-    ##  [57] 1.600000 1.000000 1.300000 1.400000 1.000000 1.500000 1.192308
-    ##  [64] 1.400000 1.300000 1.400000 1.500000 1.000000 1.500000 1.100000
-    ##  [71] 1.800000 1.300000 1.500000 1.200000 1.300000 1.400000 1.400000
-    ##  [78] 1.192308 1.192308 1.000000 1.100000 1.000000 1.200000 1.600000
-    ##  [85] 1.500000 1.600000 1.192308 1.300000 1.192308 1.192308 1.200000
-    ##  [92] 1.192308 1.192308 1.192308 1.300000 1.200000 1.300000 1.300000
-    ##  [99] 1.192308 1.300000 2.500000 1.900000 2.100000 1.800000 2.200000
-    ## [106] 2.100000 1.700000 1.800000 1.800000 2.500000 2.000000 1.900000
-    ## [113] 2.100000 2.000000 2.400000 2.300000 1.800000 1.192308 2.300000
-    ## [120] 1.500000 1.192308 2.000000 2.000000 1.800000 2.100000 1.800000
-    ## [127] 1.800000 1.800000 2.100000 1.600000 1.192308 2.000000 2.200000
-    ## [134] 1.500000 1.400000 2.300000 1.192308 1.192308 1.800000 2.100000
-    ## [141] 2.400000 2.300000 1.900000 2.300000 2.500000 2.300000 1.900000
-    ## [148] 2.000000 2.300000 1.800000
+    ##   [1] 0.2 0.2 0.2 1.2 0.2 0.4 0.3 0.2 0.2 0.1 0.2 0.2 0.1 0.1 0.2 0.4 0.4
+    ##  [18] 1.2 0.3 1.2 0.2 0.4 0.2 0.5 0.2 0.2 0.4 0.2 0.2 0.2 0.2 0.4 0.1 0.2
+    ##  [35] 0.2 0.2 0.2 0.1 1.2 0.2 0.3 1.2 0.2 0.6 0.4 0.3 0.2 0.2 0.2 0.2 1.4
+    ##  [52] 1.5 1.5 1.3 1.5 1.3 1.6 1.0 1.3 1.4 1.0 1.5 1.2 1.4 1.3 1.4 1.5 1.0
+    ##  [69] 1.5 1.1 1.8 1.3 1.5 1.2 1.3 1.4 1.4 1.2 1.2 1.0 1.1 1.0 1.2 1.6 1.5
+    ##  [86] 1.6 1.2 1.3 1.2 1.2 1.2 1.2 1.2 1.2 1.3 1.2 1.3 1.3 1.2 1.3 2.5 1.9
+    ## [103] 2.1 1.8 2.2 2.1 1.7 1.8 1.8 2.5 2.0 1.9 2.1 2.0 2.4 2.3 1.8 1.2 2.3
+    ## [120] 1.5 1.2 2.0 2.0 1.8 2.1 1.8 1.8 1.8 2.1 1.6 1.2 2.0 2.2 1.5 1.4 2.3
+    ## [137] 1.2 1.2 1.8 2.1 2.4 2.3 1.9 2.3 2.5 2.3 1.9 2.0 2.3 1.8
 
 ``` r
 replace_na(iris_with_missing[[5]])
@@ -207,16 +132,16 @@ output
     ## # A tibble: 150 x 5
     ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
     ##           <dbl>       <dbl>        <dbl>       <dbl> <chr>  
-    ##  1         5.1          3.5         1.4         0.2  setosa 
-    ##  2         4.9          3           1.4         0.2  setosa 
-    ##  3         4.7          3.2         1.3         0.2  setosa 
-    ##  4         4.6          3.1         1.5         1.19 setosa 
-    ##  5         5            3.6         1.4         0.2  setosa 
-    ##  6         5.4          3.9         1.7         0.4  setosa 
-    ##  7         5.82         3.4         1.4         0.3  setosa 
-    ##  8         5            3.4         1.5         0.2  setosa 
-    ##  9         4.4          2.9         1.4         0.2  setosa 
-    ## 10         4.9          3.1         3.77        0.1  setosa 
+    ##  1          5.1         3.5          1.4         0.2 setosa 
+    ##  2          4.9         3            1.4         0.2 setosa 
+    ##  3          4.7         3.2          1.3         0.2 setosa 
+    ##  4          4.6         3.1          1.5         1.2 setosa 
+    ##  5          5           3.6          1.4         0.2 setosa 
+    ##  6          5.4         3.9          1.7         0.4 setosa 
+    ##  7          5.8         3.4          1.4         0.3 setosa 
+    ##  8          5           3.4          1.5         0.2 setosa 
+    ##  9          4.4         2.9          1.4         0.2 setosa 
+    ## 10          4.9         3.1          3.8         0.1 setosa 
     ## # ... with 140 more rows
 
 # Problem 2
@@ -483,3 +408,13 @@ pb2_df %>%
 ```
 
 <img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+Over time, the control arm tends to have an overall constant trend:
+there are dips and rises in observation values over time that mostly
+average out. On the other hand the experimental arm tends to increase in
+its observations values over time.
+
+# Problem 3
+
+``` r
+#pb3_df
+```
