--- a/p8105_hw5_kq2127.Rmd
+++ b/p8105_hw5_kq2127.Rmd
@@ -112,9 +112,65 @@ Over time, the control arm tends to have an overall constant trend: there are di
 
 # Problem 3
 
+
+
 ```{r}
-#pb3_df
+set.seed(1)
+
+sim_regression = function(n = 30, beta0 = 2, beta1) {
+  
+  sim_data = tibble(
+    x = rnorm(n = 30),
+    y = 2 + beta1 * x + rnorm(n = 30, 0, 50)
+  )
+  
+  ls_fit = lm(y ~ x, data = sim_data)
+  
+  
+   pb3_df = tibble(
+    beta1_hat = broom::tidy(ls_fit)[2, 2] %>% pull(),
+    p = broom::tidy(ls_fit)[2, 5] %>% pull ()
+  )
+print(pb3_df)
+}
+
 ```
 
+
+```{r}
+sim_regression(beta1 = 0)
+```
+
+
+
+
+```{r}
+output = 
+  rerun(10, sim_regression(beta1 = 0 )) %>% 
+  bind_rows()
+
+#10000 was on the verge of crashing my computer so I could only run 100. 
+
+```
+
+
+
+
+```{r}
+#n_list = list("b1_1" = 1, 
+#              "b1_2" = 2, 
+#              "b1_3" = 3, 
+#              "b1_4" = 4,
+#              "b1_5" = 5,
+#              "b1_6" = 6,)
+#output = vector("list", length = 6)
+
+#for (i in 1:6) {
+#  output[[i]] = rerun(100, sim_regression(n_list[[i]])) %>% 
+#    bind_rows
+#}
+
+
+```
 
 
