--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -416,5 +416,97 @@ its observations values over time.
 # Problem 3
 
 ``` r
-#pb3_df
+set.seed(1)
+
+sim_regression = function(n = 30, beta0 = 2, beta1) {
+  
+  sim_data = tibble(
+    x = rnorm(n = 30),
+    y = 2 + beta1 * x + rnorm(n = 30, 0, 50)
+  )
+  
+  ls_fit = lm(y ~ x, data = sim_data)
+  
+  
+   pb3_df = tibble(
+    beta1_hat = broom::tidy(ls_fit)[2, 2] %>% pull(),
+    p = broom::tidy(ls_fit)[2, 5] %>% pull ()
+  )
+print(pb3_df)
+}
+```
+
+``` r
+sim_regression(beta1 = 0)
+```
+
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      2.09 0.798
+
+``` r
+output = 
+  rerun(10, sim_regression(beta1 = 0 )) %>% 
+  bind_rows()
+```
+
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1    0.0458 0.996
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1     -15.2 0.155
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1     -3.21 0.718
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1     -3.64 0.730
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      12.1 0.243
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1     -8.37 0.322
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      7.72 0.366
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      5.70 0.377
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      16.7 0.131
+    ## # A tibble: 1 x 2
+    ##   beta1_hat     p
+    ##       <dbl> <dbl>
+    ## 1      12.2 0.164
+
+``` r
+#10000 was on the verge of crashing my computer so I could only run 100. 
+```
+
+``` r
+#n_list = list("b1_1" = 1, 
+#              "b1_2" = 2, 
+#              "b1_3" = 3, 
+#              "b1_4" = 4,
+#              "b1_5" = 5,
+#              "b1_6" = 6,)
+#output = vector("list", length = 6)
+
+#for (i in 1:6) {
+#  output[[i]] = rerun(100, sim_regression(n_list[[i]])) %>% 
+#    bind_rows
+#}
 ```
