--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -493,7 +493,7 @@ output =
     ## 1      12.2 0.164
 
 ``` r
-#10000 was on the verge of crashing my computer so I could only run 100. 
+#10000 was on the verge of crashing my computer so I could only run 100.  Sorry. 
 ```
 
 ``` r
