--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -3310,25 +3310,37 @@ sim_results
     ## 10     1     13.5  0.171
     ## # ... with 590 more rows
 
-Plot
+Plots
 
 ``` r
 sim_results %>% 
   mutate(
-    power = ifelse(p < 0.05, 1, 0))
+    power = ifelse(p < 0.05, 1, 0)) %>% 
+  ggplot(aes(x = beta1, y = mean(power))) + 
+  geom_point(alpha =.5) +
+  geom_line() +
+  ggtitle("Association between effect size and power") +
+  labs(y = "Power")
 ```
 
-    ## # A tibble: 600 x 4
-    ##    beta1 beta1_hat     p power
-    ##    <dbl>     <dbl> <dbl> <dbl>
-    ##  1     1     14.3  0.331     0
-    ##  2     1     -1.86 0.810     0
-    ##  3     1      9.85 0.332     0
-    ##  4     1     -6.11 0.569     0
-    ##  5     1     11.4  0.113     0
-    ##  6     1     -5.36 0.592     0
-    ##  7     1     14.6  0.176     0
-    ##  8     1    -14.0  0.249     0
-    ##  9     1     -3.69 0.698     0
-    ## 10     1     13.5  0.171     0
-    ## # ... with 590 more rows
+<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+
+Due to computer capabilities, I could not run each beta1 more than 100
+times each without crashing my computer , thus the plot does not
+represent the actual relationship between effect size and power. But,
+from my stats classe I know that as effect size increases, the power of
+a test also increases.
+
+``` r
+sim_results %>% 
+  mutate(avg_beta1_hat = mean(beta1_hat)) %>% 
+  ggplot(aes(x = beta1, y = avg_beta1_hat)) + 
+  geom_point(alpha =.5) +
+  geom_line() 
+```
+
+<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+
+Due to small sample size, I could not generate a plot that is
+comprehensive of the beta 1 and average beta 1 hat relationship. As we
+increase the number of runs, beta 1 hat approaches the value of beta 1.
