--- a/p8105_hw5_kq2127.md
+++ b/p8105_hw5_kq2127.md
@@ -1,38 +1,27 @@
-p8105\_hw5\_kq2127
-================
-Kristal Quispe
-11/6/2019
+Problem 1
+=========
 
-# Problem 1
+    set.seed(10)
 
-``` r
-set.seed(10)
-
-iris_with_missing = iris %>% 
-  map_df(~replace(.x, sample(1:150, 20), NA)) %>%
-  mutate(Species = as.character(Species))
-```
+    iris_with_missing = iris %>% 
+      map_df(~replace(.x, sample(1:150, 20), NA)) %>%
+      mutate(Species = as.character(Species))
 
 Writting the Function
 
-``` r
-replace_na = function(x) {
-  if (is.numeric(x)) {
-    x[is.na(x)] = round(mean(x, na.rm = TRUE),1)
-    x }
-  else if (is.character(x)) {
-    x[is.na(x)] = "virginica"
-    x
-  }
-}
-```
+    replace_na = function(x) {
+      if (is.numeric(x)) {
+        x[is.na(x)] = round(mean(x, na.rm = TRUE),1)
+        x }
+      else if (is.character(x)) {
+        x[is.na(x)] = "virginica"
+        x
+      }
+    }
 
-Testing the
-    function
+Testing the function
 
-``` r
-replace_na(iris_with_missing[[1]])
-```
+    replace_na(iris_with_missing[[1]])
 
     ##   [1] 5.1 4.9 4.7 4.6 5.0 5.4 5.8 5.0 4.4 4.9 5.4 4.8 5.8 4.3 5.8 5.7 5.4
     ##  [18] 5.1 5.7 5.1 5.4 5.1 4.6 5.8 4.8 5.0 5.0 5.2 5.8 4.7 4.8 5.4 5.2 5.5
@@ -44,9 +33,7 @@ replace_na(iris_with_missing[[1]])
     ## [120] 6.0 5.8 5.6 7.7 6.3 6.7 7.2 6.2 6.1 6.4 7.2 7.4 7.9 6.4 5.8 6.1 5.8
     ## [137] 5.8 6.4 6.0 6.9 6.7 6.9 5.8 6.8 6.7 6.7 6.3 6.5 5.8 5.9
 
-``` r
-replace_na(iris_with_missing[[2]])
-```
+    replace_na(iris_with_missing[[2]])
 
     ##   [1] 3.5 3.0 3.2 3.1 3.6 3.9 3.4 3.4 2.9 3.1 3.1 3.4 3.1 3.0 4.0 4.4 3.9
     ##  [18] 3.5 3.8 3.8 3.4 3.7 3.6 3.3 3.4 3.0 3.4 3.5 3.4 3.2 3.1 3.1 3.1 4.2
@@ -58,9 +45,7 @@ replace_na(iris_with_missing[[2]])
     ## [120] 2.2 3.2 3.1 2.8 2.7 3.3 3.2 2.8 3.0 2.8 3.0 2.8 3.8 2.8 2.8 3.1 3.0
     ## [137] 3.4 3.1 3.0 3.1 3.1 3.1 2.7 3.2 3.3 3.0 2.5 3.0 3.4 3.0
 
-``` r
-replace_na(iris_with_missing[[3]])
-```
+    replace_na(iris_with_missing[[3]])
 
     ##   [1] 1.4 1.4 1.3 1.5 1.4 1.7 1.4 1.5 1.4 3.8 1.5 1.6 1.4 3.8 3.8 1.5 1.3
     ##  [18] 1.4 1.7 1.5 1.7 1.5 1.0 3.8 1.9 3.8 1.6 1.5 1.4 1.6 3.8 1.5 1.5 1.4
@@ -72,9 +57,7 @@ replace_na(iris_with_missing[[3]])
     ## [120] 5.0 5.7 4.9 6.7 4.9 5.7 6.0 4.8 4.9 5.6 5.8 6.1 3.8 3.8 5.1 5.6 6.1
     ## [137] 5.6 5.5 4.8 5.4 5.6 5.1 5.1 3.8 3.8 5.2 5.0 5.2 5.4 5.1
 
-``` r
-replace_na(iris_with_missing[[4]])
-```
+    replace_na(iris_with_missing[[4]])
 
     ##   [1] 0.2 0.2 0.2 1.2 0.2 0.4 0.3 0.2 0.2 0.1 0.2 0.2 0.1 0.1 0.2 0.4 0.4
     ##  [18] 1.2 0.3 1.2 0.2 0.4 0.2 0.5 0.2 0.2 0.4 0.2 0.2 0.2 0.2 0.4 0.1 0.2
@@ -86,9 +69,7 @@ replace_na(iris_with_missing[[4]])
     ## [120] 1.5 1.2 2.0 2.0 1.8 2.1 1.8 1.8 1.8 2.1 1.6 1.2 2.0 2.2 1.5 1.4 2.3
     ## [137] 1.2 1.2 1.8 2.1 2.4 2.3 1.9 2.3 2.5 2.3 1.9 2.0 2.3 1.8
 
-``` r
-replace_na(iris_with_missing[[5]])
-```
+    replace_na(iris_with_missing[[5]])
 
     ##   [1] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
     ##   [6] "setosa"     "setosa"     "setosa"     "setosa"     "setosa"    
@@ -123,11 +104,9 @@ replace_na(iris_with_missing[[5]])
 
 Applying the function and mapping
 
-``` r
-output = map_dfr(iris_with_missing, replace_na)
+    output = map_dfr(iris_with_missing, replace_na)
 
-output
-```
+    output
 
     ## # A tibble: 150 x 5
     ##    Sepal.Length Sepal.Width Petal.Length Petal.Width Species
@@ -144,37 +123,36 @@ output
     ## 10          4.9         3.1          3.8         0.1 setosa 
     ## # ... with 140 more rows
 
-# Problem 2
+Problem 2
+=========
 
-``` r
-pb2_df = 
-  list.files(
-    path = "./data/",
-    pattern = "*.csv",
-    full.names = TRUE) %>% 
-  map_df(read_csv, .id = "input") %>% 
-  rename(id = input) %>% 
-  mutate(
-    id = as.numeric(id),
-    arm = ifelse(id <= 10, "con", "exp"),
-    id = recode(id,
-       '11' = 1,
-       '12' = 2,
-       '13' = 3,
-       '14' = 4,
-       '15' = 5,
-       '16' = 6,
-       '17' = 7,
-       '18' = 8,
-       '19' = 9,
-       '20' = 10)) %>% 
-  pivot_longer(
-    week_1:week_8,
-    names_to = "week",
-    names_prefix = "week_",
-    values_to = "observation") %>%
-  select(id, arm, everything())
-```
+    pb2_df = 
+      list.files(
+        path = "./data/",
+        pattern = "*.csv",
+        full.names = TRUE) %>% 
+      map_df(read_csv, .id = "input") %>% 
+      rename(id = input) %>% 
+      mutate(
+        id = as.numeric(id),
+        arm = ifelse(id <= 10, "con", "exp"),
+        id = recode(id,
+           '11' = 1,
+           '12' = 2,
+           '13' = 3,
+           '14' = 4,
+           '15' = 5,
+           '16' = 6,
+           '17' = 7,
+           '18' = 8,
+           '19' = 9,
+           '20' = 10)) %>% 
+      pivot_longer(
+        week_1:week_8,
+        names_to = "week",
+        names_prefix = "week_",
+        values_to = "observation") %>%
+      select(id, arm, everything())
 
     ## Parsed with column specification:
     ## cols(
@@ -397,50 +375,45 @@ pb2_df =
     ##   week_8 = col_double()
     ## )
 
-``` r
-pb2_df %>% 
-  mutate (id = as.factor(id)) %>% 
-  ggplot(aes(x = week, y = observation, color = id, group = id)) + 
-  geom_point(alpha =.5) +
-  geom_line() +
-  facet_grid(~arm) +
-  ggtitle("Observations over time") 
-```
+    pb2_df %>% 
+      mutate (id = as.factor(id)) %>% 
+      ggplot(aes(x = week, y = observation, color = id, group = id)) + 
+      geom_point(alpha =.5) +
+      geom_line() +
+      facet_grid(~arm) +
+      ggtitle("Observations over time") 
 
-<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-5-1.png" width="90%" />
+<img src="p8105_hw5_kq2127_files/figure-markdown_strict/unnamed-chunk-5-1.png" width="90%" />
 Over time, the control arm tends to have an overall constant trend:
 there are dips and rises in observation values over time that mostly
 average out. On the other hand the experimental arm tends to increase in
 its observations values over time.
 
-# Problem 3
+Problem 3
+=========
 
-``` r
-set.seed(1)
+    set.seed(1)
 
-sim_regression = function(n = 30, beta0 = 2, beta1) {
-  
-  sim_data = tibble(
-    x = rnorm(n = 30),
-    y = 2 + beta1 * x + rnorm(n = 30, 0, 50)
-  )
-  
-  ls_fit = lm(y ~ x, data = sim_data)
-  
-  
-   pb3_df = tibble(
-    beta1_hat = broom::tidy(ls_fit)[2, 2] %>% pull(),
-    p = broom::tidy(ls_fit)[2, 5] %>% pull ()
-  )
-print(pb3_df)
-}
-```
+    sim_regression = function(n = 30, beta0 = 2, beta1) {
+      
+      sim_data = tibble(
+        x = rnorm(n = 30),
+        y = 2 + beta1 * x + rnorm(n = 30, 0, 50)
+      )
+      
+      ls_fit = lm(y ~ x, data = sim_data)
+      
+      
+       pb3_df = tibble(
+        beta1_hat = broom::tidy(ls_fit)[2, 2] %>% pull(),
+        p = broom::tidy(ls_fit)[2, 5] %>% pull ()
+      )
+    print(pb3_df)
+    }
 
 Testting the function
 
-``` r
-sim_regression(beta1 = 0)
-```
+    sim_regression(beta1 = 0)
 
     ## # A tibble: 1 x 2
     ##   beta1_hat     p
@@ -449,11 +422,9 @@ sim_regression(beta1 = 0)
 
 Generating 100 datasets
 
-``` r
-output_2 = 
-  rerun(100, sim_regression(beta1 = 0 )) %>% 
-  bind_rows()
-```
+    output_2 = 
+      rerun(100, sim_regression(beta1 = 0 )) %>% 
+      bind_rows()
 
     ## # A tibble: 1 x 2
     ##   beta1_hat     p
@@ -856,9 +827,7 @@ output_2 =
     ##       <dbl> <dbl>
     ## 1      6.11 0.578
 
-``` r
-output_2
-```
+    output_2
 
     ## # A tibble: 100 x 2
     ##    beta1_hat     p
@@ -880,15 +849,13 @@ my computer so I could only run 100.
 
 Rerun function with beta1 as 1-6
 
-``` r
-sim_results = 
-  tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
-  mutate(
-    output_lists = map(.x = beta1, ~rerun(100, sim_regression(beta1 = .x))),
-    estimate_dfs = map(output_lists, bind_rows)) %>% 
-  select(-output_lists) %>% 
-  unnest(estimate_dfs)
-```
+    sim_results = 
+      tibble(beta1 = c(1, 2, 3, 4, 5, 6)) %>% 
+      mutate(
+        output_lists = map(.x = beta1, ~rerun(100, sim_regression(beta1 = .x))),
+        estimate_dfs = map(output_lists, bind_rows)) %>% 
+      select(-output_lists) %>% 
+      unnest(estimate_dfs)
 
     ## # A tibble: 1 x 2
     ##   beta1_hat     p
@@ -3291,9 +3258,7 @@ sim_results =
     ##       <dbl>  <dbl>
     ## 1     -22.9 0.0947
 
-``` r
-sim_results
-```
+    sim_results
 
     ## # A tibble: 600 x 3
     ##    beta1 beta1_hat     p
@@ -3312,18 +3277,16 @@ sim_results
 
 Plots
 
-``` r
-sim_results %>% 
-  mutate(
-    power = ifelse(p < 0.05, 1, 0)) %>% 
-  ggplot(aes(x = beta1, y = mean(power))) + 
-  geom_point(alpha =.5) +
-  geom_line() +
-  ggtitle("Association between effect size and power") +
-  labs(y = "Power")
-```
+    sim_results %>% 
+      mutate(
+        power = ifelse(p < 0.05, 1, 0)) %>% 
+      ggplot(aes(x = beta1, y = mean(power))) + 
+      geom_point(alpha =.5) +
+      geom_line() +
+      ggtitle("Association between effect size and power") +
+      labs(y = "Power")
 
-<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" />
+<img src="p8105_hw5_kq2127_files/figure-markdown_strict/unnamed-chunk-10-1.png" width="90%" />
 
 Due to computer capabilities, I could not run each beta1 more than 100
 times each without crashing my computer , thus the plot does not
@@ -3331,16 +3294,38 @@ represent the actual relationship between effect size and power. But,
 from my stats classe I know that as effect size increases, the power of
 a test also increases.
 
-``` r
-sim_results %>% 
-  mutate(avg_beta1_hat = mean(beta1_hat)) %>% 
-  ggplot(aes(x = beta1, y = avg_beta1_hat)) + 
-  geom_point(alpha =.5) +
-  geom_line() 
-```
+    sim_results %>% 
+      group_by(beta1) %>% 
+      mutate(avg_beta1_hat = mean(beta1_hat)) %>% 
+      ggplot(aes(x = beta1, y = avg_beta1_hat)) + 
+      geom_point(alpha =.5) +
+      geom_line() 
 
-<img src="p8105_hw5_kq2127_files/figure-gfm/unnamed-chunk-11-1.png" width="90%" />
+<img src="p8105_hw5_kq2127_files/figure-markdown_strict/unnamed-chunk-11-1.png" width="90%" />
 
 Due to small sample size, I could not generate a plot that is
 comprehensive of the beta 1 and average beta 1 hat relationship. As we
-increase the number of runs, beta 1 hat approaches the value of beta 1.
+increase the number of runs, beta 1 hat should approache the true value
+of beta 1.
+
+    sim_results %>% 
+      filter (p < 0.05) %>% 
+      group_by(beta1) %>% 
+      mutate(avg_beta1_hat = mean(beta1_hat)) %>% 
+      ggplot(aes(x = beta1, y = avg_beta1_hat)) + 
+      geom_point() +
+      geom_line()
+
+<img src="p8105_hw5_kq2127_files/figure-markdown_strict/unnamed-chunk-12-1.png" width="90%" />
+
+The sample average of beta 1 hat across tests for which the null is
+rejected is not approximately equal to the true value of beta 1. This is
+because, in filtering out the beta 1 hat approximations where we fail to
+reject the null, we reduce the number of samples. As samples decrease,
+beta 1 hat gets further and further away from the true value of beta 1.
+
+I had to render the documnet to a md\_document beucase after my second
+plot, I kept getting the following error which would not let me knit:
+pandoc document conversion failed with error 1022. My computer was also
+not able to process 10,000 samples as specified in question 3, it kept
+almost crashing so I could only run 100 samples per beta 1.
